--- a/config.env
+++ b/config.env
@@ -1,22 +1,22 @@
 # Remove this line before deploying
 _____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = "5584790751:AAGTBmjvaurGYgZz5Q1Hs48OSnkWAUA16VI"
-OWNER_ID = "5263539011"
-TELEGRAM_API = "10425657"
-TELEGRAM_HASH = "ec42b7d1f0fa889d7631473709e8ee37"
+BOT_TOKEN = "5433385356:AAHv22rNhc0g7vqhuk_cShscDNuZpGGd50g"
+OWNER_ID = "1348352154"
+TELEGRAM_API = "7805769"
+TELEGRAM_HASH = "7da8a20d0b9e7603d9454dba1547fecd"
 # OPTIONAL CONFIG
-GDRIVE_FOLDER_ID = "17Shuhab0_xPrxF0b6dmZvUU1ZAnobNaB"
+GDRIVE_FOLDER_ID = "1--_AaoQaQpU-MW35yqO_Z5YinsCLzYKz"
 IS_TEAM_DRIVE = "True"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "-1"
-DATABASE_URL = "mongodb+srv://zxc:54437443@dohu.5zf6jzs.mongodb.net/?retryWrites=true&w=majority"
-AUTHORIZED_CHATS = "-1001536297671"
-SUDO_USERS = "1348352154"
+DATABASE_URL = "mongodb+srv://polis:<password>@cluster0.siqvej4.mongodb.net/?retryWrites=true&w=majority"
+AUTHORIZED_CHATS = "-1001353631622"
+SUDO_USERS = "1196432909"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "False"
-INDEX_URL = "https://yamete-kudasai.my.id/0:"
+INDEX_URL = "https://xnxxx.my.id/0:"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
 CMD_INDEX = ""
