--- a/config.env
+++ b/config.env
@@ -11,7 +11,7 @@ IS_TEAM_DRIVE = "True"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "-1"
-DATABASE_URL = "mongodb+srv://polis:<password>@cluster0.siqvej4.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb://mongo:xLi3OHeSZQnNdXxQyys5@containers-us-west-99.railway.app:5564"
 AUTHORIZED_CHATS = "-1001353631622"
 SUDO_USERS = "1196432909"
 IGNORE_PENDING_REQUESTS = ""
